Fixing dark mode highlight

--- a/app/static/css/dark.css
+++ b/app/static/css/dark.css
@@ -103,7 +103,7 @@ body.dark .th-subbar a:hover {
 
 /* Posts */
 
-body.dark .highlight{
+body.dark .comments article.comment.highlight{
   background-color: rgba(64, 64, 61, 0.35);
 }
 body.dark .post:nth-child(2n) {
